--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@anontown/api-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
